ACCOUNTS-6 cyph gradient z-index fix

--- a/shared/css/components/cyph.im/account.scss
+++ b/shared/css/components/cyph.im/account.scss
@@ -10,6 +10,7 @@
 	background-image: url(/img/cyph.brick.pattern.png);
     background-repeat: repeat;
     background-position-x: 50%;
+	z-index: -999;
 }
 
 .login-form {
